source/_patterns/02-molecules/read-more/_read-more.scss
$_config_schemes: (
  base: (
    rm-background: "base-lightest",
    rm-border: "base-light",
    rm-border-content: "blue-50",
    rm-border-size: 1px,
    rm-border-size-thick: 0.5,
    rm-border-radius: 0.5rem,
    rm-text-size: 6,
  ),
);

$_config: map-merge-by-keys($_config_schemes, base, $_config_schemes, $scheme);

.read-more {
  @include u-display(flex);
  @include u-margin-bottom(4);
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: center;
  max-inline-size: 75ch;
}

h3.read-more__heading {
  @include u-display(flex);
  @include u-border(map-get($_config, rm-border-size), map-get($_config, rm-border));
  @include u-bg(map-get($_config, rm-background));
  @include u-padding-left(2);
  @include u-font-size(body, map-get($_config, rm-text-size));
  @include u-color(ink);
  align-items: center;
  justify-content: space-between;
  border-radius: map-get($_config, rm-border-radius);
}

.read-more__action {
  @include u-display(flex);
  @include u-margin-left(2);
  @include u-padding(2);
  @include u-padding-right(3);
  @include u-border(0);
  @include u-border-left(map-get($_config, rm-border-size), map-get($_config, rm-border));
  @include u-bg("white");
  @include u-color(primary);
  @include u-font-weight(bold);
  align-items: center;
  width: 10ch;
  justify-content: center;
  border-top-right-radius: map-get($_config, rm-border-radius);
  border-bottom-right-radius: map-get($_config, rm-border-radius);
  text-decoration: none;
}

.read-more__action .icon {
  @include u-position(relative);
  @include u-left(1);
  @include u-font-weight(bold);
}

.read-more__heading[expanded] > .read-more__action .icon {
  transform: rotate(180deg);
}

.read-more__action:hover {
  @include u-cursor(pointer);
}

.read-more__content {
  @include u-display(none);
  @include u-margin-top(3);
  @include u-padding-x(2);
  @include u-border-left(
    map-get($_config, rm-border-size-thick),
    map-get($_config, rm-border-content)
  );
  @include u-font-size(body, 3);
  flex: 0 0 100%;

  p:not(:first-child) {
    @include u-padding-top(2);
  }
}

.read-more__heading[expanded] + .read-more__content {
  @include u-display(block);
}

.read-more--text .read-more__heading {
  @include u-border(0);
  @include u-radius(0);
  @include u-bg("transparent");
  padding-inline-start: unset;
}

.read-more--text .read-more__action {
  @include u-border(0);
  @include u-radius(0);
  @include u-bg("transparent");
  @include u-margin-left(0);
  padding-block: unset;
}

.read-more--text .read-more__action::after {
  @include u-border(0);
}

